# bildebank

./: .gitignore  AGENTS.md  COPYRIGHT  Installasjon.md  Makefile  README.linux.md  README.md  app-design.md  bdb.cmd  bdb.ps1  bilde-browser.html  bildebank-config.example.toml  finn  fix-path.ps1  install-insightface.ps1  install-insightface.sh  install-openclip.ps1  install-openclip.sh  pandoc.css  pyproject.toml  setup-windows.ps1  update.ps1  windows11.md
.codex/: config.toml
bildebank/: __init__.py  backup.py  browser_dates.py  cli.py  cli_check_source.py  cli_doctor.py  cli_face.py  cli_geo.py  cli_image.py  cli_server.py  cli_update.py  collection_paths.py  config.py  db.py  db_core.py  db_files.py  db_geo.py  db_lifecycle.py  db_schema.py  db_sources.py  db_tags.py  dev_mcp.py  exiftool_probe.py  export_person.py  face.py  ffmpeg_tools.py  file_lifecycle.py  file_moves.py  file_tags.py  formatting.py  geo.py  html_export.py  html_paths.py  importer.py  item_sidecars.py  launcher.py  launcher_advanced_start_tab.py  launcher_app.py  launcher_commands.py  launcher_import_tab.py  (+58 more)
bilder/: __init__.py  backup.py  cli.py  config.py  db.py  exiftool.py  exiftool_probe.py  face.py  geo.py  html_export.py  importer.py  media.py  media_cache.py  openclip.py  program_state.py  progress.py  server.py  target_lock.py  thumbnails.py
devel-docs/: backup.md  begrensninger-og-krav.md  browser-benchmark.md  database-v10-migration.md  database-v11-migration.md  database-v12-migration.md  database-v13-migration.md  database-v14-migration.md  database-v15-migration.md  database-v16-migration.md  database-v17-migration.md  database-v18-migration.md  database-v4-migration.md  database-v5-migration.md  database-v6-migration.md  database-v7-migration.md  database-v8-migration.md  database-v9-migration.md  db-moduler.md  deps-testing-setup.md  deps.md  doctor-integrity.md  face-database-per-model.md  face-database.md  launcher-oppsplitting.md  launcher.md  openclip-database.md  slideshow.md  (+9 more)
(+174 files in other folders)
