[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "bildebank"
version = "0.2.0"
description = "Konservativt bildesorteringsprogram for å samle bilder og videoer."
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
face = [
    "insightface==0.7.3",
    "numpy",
    "onnxruntime",
]
openclip = [
    "open_clip_torch",
]

[project.scripts]
bildebank = "bilder.cli:main"

[tool.setuptools.packages.find]
include = ["bilder*"]
