[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "bildebank"
version = "0.3.0"
description = "Konservativt bildesorteringsprogram for å samle bilder og videoer."
requires-python = ">=3.13"
dependencies = [
    "h3",
    "numpy",
    "Pillow",
]

[project.optional-dependencies]
face = [
    "insightface==1.0.1",
    "onnxruntime",
]
openclip = [
    "open_clip_torch",
]

[project.scripts]
bildebank = "bildebank.cli:main"

[tool.setuptools.packages.find]
include = ["bildebank*"]
